--- a/Content.Client/DeltaV/AACTablet/UI/AACWindow.xaml
+++ b/Content.Client/DeltaV/AACTablet/UI/AACWindow.xaml
@@ -1,4 +1,4 @@
-<ui:FancyWindow xmlns="https://spacestation14.io"
+<controls:FancyWindow xmlns="https://spacestation14.io"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
     Title="AAC Tablet"
     Resizable="False"
@@ -6,4 +6,4 @@
     MinSize="540 300">
     <ScrollContainer HScrollEnabled="False" Name="WindowBody">
     </ScrollContainer>
-</ui:FancyWindow>
+</controls:FancyWindow>
